# workspace

./: .env.example  .gitignore  AGENTS_ARCHITECTURE.md  AGENTS_KNOWLEDGE.md  AGENTS_ROADMAP.md  README.md  compose.debug.yaml  compose.yaml  fix_wsl.ps1  gateway.ts  package-lock.json  package.json  pnpm-lock.yaml  temp_co_prompt.md  test_mcp.py  tsconfig.json  tsconfig.lint.json  tsconfig.lint.tsbuildinfo  tsconfig.tsbuildinfo  vercel_openai.py
app/: globals.css  page.tsx
lib/swarm/: engine.ts  parse.ts  store.ts  types.ts  verifier.ts
prompts/: worker2.md
runs/round-1/: coordinator.md  evaluator.md  messages.jsonl  research.md  worker1.md  (+1 more)
scripts/: swarm-cli.ts
swiss-knife-temp/: README.md  __init__.py  pyproject.toml  taks.txt
swiss-knife-temp/ai_agents_swiss_knife.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
swiss-knife-temp/configs/clients/: codex-cli.mcp.json  generic-mcp-jsonrpc-stdio.json
swiss-knife-temp/scripts/: install_service.ps1  run_server.cmd  setup_local.ps1  setup_local.sh  uninstall_service.ps1
swiss-knife-temp/scripts/winsw/: ai-agents-swiss-knife.xml.template
swiss-knife-temp/server/: __init__.py  mcp_server.py  mcp_transport.py  requirements.txt  tool_catalog.py
swiss-knife-temp/server/tools/: excel_mcp.py  fs.py  search_mcp.py  shell.py  zip_tools.py
swiss-knife-temp/server/ui/: index.html  styles.css
swiss-knife-temp/skills/mcp-toolbox/: SKILL.md
swiss-knife-temp/skills/mcp-toolbox/references/: toolbox.md
swiss-knife-temp/tests/: test_telemetry_redaction.py
swiss-knife-temp/tmp/: summary-20260109-063807.json
(+24 files in other folders)
