[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-swiss-knife"
version = "0.2.0"
description = "Local MCP server and stdio bridge for Codex and MCP-compatible clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openpyxl",
]

[project.scripts]
ai-agents-swiss-knife-server = "server.mcp_server:main"
ai-agents-swiss-knife-bridge = "server.mcp_bridge:main"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.setuptools.package-data]
server = ["ui/*.html", "ui/*.css", "ui/*.js"]

[tool.setuptools]
include-package-data = true
